@@ -42,3 +42,6 @@ collar.shp
 hoods.shp
 musket.shp
 custom_sword.shp
+main_gauche.shp
+magic_helmet.shp
+throwing_axe.shp
